// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component transforms svg 1`] = `
"import React from 'react'
import SVG from './Icon'

function Icon(props) {
  return (
    <SVG width="24" height="24" viewBox="0 0 24 24" {...props}>
      <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
    </SVG>
  )
}

export default Icon
"
`;

exports[`component transforms svg to ESM format 1`] = `
"var __defProp = Object.defineProperty
var __defProps = Object.defineProperties
var __getOwnPropDescs = Object.getOwnPropertyDescriptors
var __getOwnPropSymbols = Object.getOwnPropertySymbols
var __hasOwnProp = Object.prototype.hasOwnProperty
var __propIsEnum = Object.prototype.propertyIsEnumerable
var __defNormalProp = (obj, key, value) =>
  key in obj
    ? __defProp(obj, key, {
        enumerable: true,
        configurable: true,
        writable: true,
        value,
      })
    : (obj[key] = value)
var __spreadValues = (a, b) => {
  for (var prop in b || (b = {}))
    if (__hasOwnProp.call(b, prop)) __defNormalProp(a, prop, b[prop])
  if (__getOwnPropSymbols)
    for (var prop of __getOwnPropSymbols(b)) {
      if (__propIsEnum.call(b, prop)) __defNormalProp(a, prop, b[prop])
    }
  return a
}
var __spreadProps = (a, b) => __defProps(a, __getOwnPropDescs(b))
import React from 'react'
import SVG from './Icon'
function Heart(props) {
  return /* @__PURE__ */ React.createElement(
    SVG,
    __spreadProps(
      __spreadValues(
        {
          width: '24',
          height: '24',
          viewBox: '0 0 24 24',
        },
        props
      ),
      {
        className:
          'Mdi Mdi--Heart' + (props.className ? \` \${props.className}\` : ''),
      }
    ),
    /* @__PURE__ */ React.createElement('path', {
      d: 'M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z',
    })
  )
}
var stdin_default = Heart
export {stdin_default as default}
"
`;

exports[`component transforms svg with baseClassName 1`] = `
"import React from 'react'
import SVG from './Icon'

function Heart(props) {
  return (
    <SVG
      width="24"
      height="24"
      viewBox="0 0 24 24"
      {...props}
      className={
        'Mdi Mdi--Heart' + (props.className ? \` \${props.className}\` : '')
      }
    >
      <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
    </SVG>
  )
}

export default Heart
"
`;

exports[`component transforms svg with options 1`] = `
"import React from 'react'
import SVG from 'base-icon'

function Component(props) {
  return (
    <SVG width="24" height="24" viewBox="0 0 24 24" {...props}>
      <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
    </SVG>
  )
}

Component.defaultProps = {width: 24, height: 24}

export default Component
"
`;
